# FrontendFreemarket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  angular.json  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.defaults
Documentation/: PiLab_ESP_IDF_Firmware_Documentation.html
Web/: index.html  package-lock.json  package.json  vite.config.js
Web/Documentation/: README.txt  index.html
Web/src/: App.vue  router.js  (+1 more)
components/angelscript/: CMakeLists.txt
main/: CMakeLists.txt  README_PiLab_Command_Center.txt  ethernet_web.c  ethernet_web.hpp  idf_component.yml  main.cpp  perf_test.cpp  perf_test.hpp  plc_filesystem.cpp  plc_filesystem.hpp  plc_io.cpp  plc_io.hpp  plc_tags.cpp  plc_tags.hpp  script_engine.cpp  script_engine.hpp  udp_server.hpp
main/Misc/: README_ANGELSCRIPT_SHARED_EXCLUSIVE_LOCK_TEST.md  README_COMPILEFIX.md  README_CONTEXT_PER_SCAN_TLS_CLEANUP.md  README_GLOBAL_IO_PATCH.txt  README_PLC_DOUBLE_ENGINE.md  README_RELOAD_THROTTLE.md  README_RTSCRIPT_STYLE_HOTSWAP.md  README_RTSCRIPT_STYLE_SAFE_HOTSWAP.md  README_RTSCRIPT_STYLE_SCAN_OWNED_CLEANUP.md  README_no_pause_external_process_image.md  example_control.as  perf_test - Copy.cpp.before hardware timer  perf_test - Copy.cpp.hardware timer no work  prism.html  test_plc_script.as  udp_server - Copy.c  udp_server - Copy.c.original
main/web/: index.html
main/web/assets/: app.js  index.css
src/: index.html  polyfills.ts
tools/: GitInfo.ps1  PiLabApiDeepCheck.py  PiLabApiSmokeTest.py  PiLabCompareZips.ps1  PiLabLittleFsDump.py  PiLabZips.ps1  README.md  copyWeb.ps1
(+199 files in other folders)
